[package]
name = "twilio"
version = "1.0.0"
description = "Rust bindings for the Twilio API"
readme = "README.md"
repository = "https://github.com/neil-lobracco/twilio-rs"
license = "MIT"
authors = ["Neil LoBracco <neil.lobracco@gmail.com>", "Lance Carlson <lancecarlson@gmail.com>"]
keywords = ["twilio","rust"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
headers = "0.3.2"
hyper = { version = "0.14.4", features = ["full"] }
hyper-tls = "0.5"
mime = "0.3"
serde = { version = "1.0.10", features = ["derive"] }
serde_json = "1.0.2"
rust-crypto = "0.2"
url = "2.0"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.3.0", features = ["full"] }
