[package]
name = "twilio"
version = "1.0.0"
description = "Rust bindings for the Twilio API"
readme = "README.md"
repository = "https://github.com/neil-lobracco/twilio-rs"
license = "MIT"
authors = ["Neil LoBracco <neil.lobracco@gmail.com>", "Lance Carlson <lancecarlson@gmail.com>"]
keywords = ["twilio","rust"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }


[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
