[package]
name = "twilio"
version = "1.0.3"
description = "Rust bindings for the Twilio API"
readme = "README.md"
repository = "https://github.com/neil-lobracco/twilio-rs"
license = "MIT"
authors = [
    "Neil LoBracco <neil.lobracco@gmail.com>",
    "Lance Carlson <lancecarlson@gmail.com>",
]
keywords = ["twilio", "rust"]
edition = "2018"

[dependencies]
base64 = "0.12"
headers = "0.3.2"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
mime = "0.3"
serde = { version = "1.0.10", features = ["derive"] }
serde_json = "1.0.2"
sha1 = "0.10"
hmac = "0.12"
url = "2.0"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
hyper = { version = "0.14", features = ["server"] }
